# ratedwatch

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  LICENSE  README.md  lint-staged.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
.github/workflows/: cheat-regression-weekly.yml  ci.yml  python-ci.yml
container/dial-reader/: Dockerfile  Makefile  README.md  pyproject.toml
container/dial-reader/scripts/: build_smoke_fixtures.py
container/dial-reader/src/dial_reader/: __init__.py  confidence_scorer.py  dial_locator.py  dial_reader.py  hand_geometry.py  http_app.py  image_decoder.py  sentry_init.py  synthetic.py  time_translator.py
container/dial-reader/tests/: conftest.py  test_confidence_scorer.py  test_dial_locator.py  test_dial_reader.py  test_hand_angles.py  test_hand_geometry.py  test_http_app.py  test_image_decoder.py  test_observability.py  test_sentry_init.py  test_synthetic.py  test_time_translator.py
container/dial-reader/tests/fixtures/smoke/: manifest.json
infra/: README.md
infra/terraform/: .terraform.lock.hcl  README.md  ai-gateway.tf  d1.tf  kv.tf  logpush.tf  main.tf  outputs.tf  r2.tf  subdomain-wildcard.tf  variables.tf  workers-domain.tf
migrations/: 0001_init.sql  0002_movements.sql  0003_watches.sql  0004_readings.sql  0005_watch_images.sql  0006_watch_reference.sql  0007_verified_reading_cv.sql  0008_vlm_dial_reader.sql
scripts/: build_smoke_fixtures.py  corpus-summary.ts  dial-reader-analytics.sql  wrangler-types-clean.sh
scripts/db/: seed-movements.ts
scripts/flags/: set.ts
scripts/vlm-bakeoff/: README.md  bakeoff.py  report.md  results.json
src/app/: App.tsx  index.html  main.tsx  styles.css
src/db/: index.ts  schema.ts
src/domain/: username.test.ts  username.ts
src/observability/: events.test.ts  events.ts  sentry-stub.test.ts  sentry-stub.ts  sentry.beforeSend.test.ts  sentry.test.ts  sentry.ts
src/public/: landing.tsx
src/schemas/: movement.ts  reading.test.ts  reading.ts  user.ts  watch.ts
src/server/: auth.ts
src/types/: exifr-lite.d.ts
src/worker/: index.ts  index.tsx
tests/e2e/: auth.smoke.test.ts  verified-reading-confirmation.smoke.test.ts  verified-reading.smoke.test.ts  watches.smoke.test.ts
tests/integration/: auth.oauth.test.ts  auth.origin.test.ts  seo.test.ts  (+28 more)
(+144 files in other folders)
